--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
   </div>
 
   <!-- Visual Knowledge Image -->
-  <img id="visualknowledge-img" src="/images/visualknowledge2.png" style="display: none">
+  <img id="visualknowledge-img" src="images/visualknowledge2.png" style="display: none">
 
   <!-- Configurational Knowledge Image -->
-  <iframe id="configurationalknowledge-img" src="/images/configurational.pdf" style="display: none;"></iframe>
+  <iframe id="configurationalknowledge-img" src="images/configurational.pdf" style="display: none;"></iframe>
 
   <!-- Procedural Knowledge iFrame -->
-  <iframe id="proceduralknowledge-iframe" src="/images/flowchart-final2.pdf" style="display: none;"></iframe>
+  <iframe id="proceduralknowledge-iframe" src="images/flowchart-final2.pdf" style="display: none;"></iframe>
 
   <div id="iframe-container" class="d-none">
     <iframe id="observablehq-chart-frame" frameborder="0" width="100%" height="600"></iframe>
